--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/goormthon
+    url: jdbc:mysql://mysql:3306/goormthon
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 1234
