--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,10 +10,10 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://mysql:3306/goormthon
+    url: ${SPRING_DATASOURCE_URL}
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: 1234
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: update #create update none
