--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/goormthon
+    url: jdbc:mysql://localhost:3306/cheerup_db?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Seoul
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 1234
@@ -20,7 +20,29 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     database-platform: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: plzChange-me-1234567890
+            client-secret: plzChange-me-1234567890
+            scope:
+              - email
+              - profile
+        provider:
+          google:
+            authorization-uri: https://accounts.google.com/o/oauth2/v2/auth
+            token-uri: https://www.googleapis.com/oauth2/v4/token
+            user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
+            user-name-attribute: sub
 
+logging:
+  level:
+    org.springframework.security: DEBUG
+    org.springframework.security.oauth2: DEBUG
+    com.example.demo.global.auth: DEBUG
+    com.example.demo.global.jwt: DEBUG
 
 springdoc:
   swagger-ui:
@@ -28,6 +50,8 @@ springdoc:
     tags-sorter: alpha
     operations-sorter: method
     disable-swagger-default-url: true
+    url: "/api-docs"
+    config-url: "/api-docs/swagger-config"
     display-request-duration: true
     defaultModelsExpandDepth: 2
     defaultModelExpandDepth: 2
