--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,7 +47,7 @@ spring:
             user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
             user-name-attribute: sub
           naver:
-            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize?auth_type=reauthenticate
             token-uri: https://nid.naver.com/oauth2.0/token
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
