--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,6 +31,7 @@ spring:
             scope:
               - email
               - profile
+            redirect-uri: https://api.cheer-up.net/login/oauth2/code/google
           naver:
             client-id: ${NAVER_CLIENT_ID}
             client-secret: ${NAVER_CLIENT_SECRET}
@@ -39,7 +40,7 @@ spring:
               - email
             client-name: Naver
             authorization-grant-type: authorization_code
-            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+            redirect-uri: https://api.cheer-up.net/login/oauth2/code/naver
         provider:
           google:
             authorization-uri: https://accounts.google.com/o/oauth2/v2/auth
